fixed nav button on mobile

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -67,5 +67,10 @@ header {
                 }
             }
         }
+
+        button {
+            border: unset;
+            background-color: unset;
+        }
     }
 }
